# git-ai-commit

./: AGENTS.md  DEVELOP_Doc.md  TodoList.md  cli.py  final_verification.txt  pyproject.toml
.github/: copilot-instructions.md
config/: default.yaml  loader.py  logic.py  models.py
core/: pipeline.py  registry.py
core/collectors/: __init__.py  diff_collector.py  dummy_collector.py  history_collector.py  issue_collector.py  mcp_collector.py  readme_collector.py
core/contracts/: collector.py  formatter.py  models.py  provider.py
core/formatter/: jinja_formatter.py
core/formatter/templates/: conventional.j2
core/llm/: __init__.py  router.py
core/llm/providers/: __init__.py  claude.py  deepseek.py  dummy_provider.py  local.py  openai.py
tests/: test_claude_provider.py  test_collectors.py  test_deepseek_provider.py  test_formatter.py  test_local_provider.py  test_new_collectors.py  test_pipeline.py  test_provider.py  test_registry.py
utils/: cache.py  errors.py  git.py  logger.py
