[project]
name = "ai-git-commit-msg"
version = "0.1.0"
description = "A CLI tool to automatically generate Git commit messages using AI."
readme = "DEVELOP_Doc.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
]

[tool.setuptools]
packages = ["core", "config", "utils"]
py-modules = ["cli"]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
aicommit = "cli:main"
